[FIX] removed enable preview feature